feat(fullstack): complete ticketing POS, F&B menu, voucher & loyalty flows + realistic seed data
Chỉnh sửa lớn — liệt kê toàn bộ:

[Khách hàng] Ưu đãi & Voucher:
- Đổi điểm tích luỹ lấy voucher (Promotion.allowPointRedemption, VoucherService.redeemWithPoints; API /vouchers/redeem, /marketing/promotions/redeemable)
- Tìm/nhập & lưu mã voucher (lookup, claim); áp dụng voucher ở bước thanh toán (apply); sửa lỗi giảm giá 2 lần khi thanh toán VNPAY
- Trang Khuyến mãi công khai chỉ hiển thị voucher cho phép đổi điểm

[Khách hàng] Đặt vé:
- Thêm bước chọn Combo/F&B sau chọn ghế; hiển thị vé QR trong Lịch sử đặt vé; sửa N+1 ở lịch sử

[Quản trị] POS Bán vé:
- Nối API thật (suất chiếu, sơ đồ ghế còn trống/đã bán, combo, thanh toán); tính giá theo loại ghế; tra cứu thành viên tích điểm; mã đặt vé thật; gửi F&B vào đơn + trừ kho BOM
- Thiết kế lại UI: ghế gọn hiển thị mã đầy đủ, giỏ F&B gộp 1 hàng, bo tròn nút (AppButton rounded-xl)

[Quản trị] Khác:
- Thực đơn F&B/Combo: CRUD đầy đủ (FnbItem thêm imageUrl/description/isActive) + trang FnbMenuManager
- Quản lý khách hàng (AdminCustomers + API /customers)
- Khuyến mãi: nối API thật tạo/sửa/xoá + phát voucher cho khách

[Hệ thống & dữ liệu]
- Cột mới: promotions.allow_point_redemption; fnb_items.image_url/description/is_active; cập nhật giá ghế thực tế (110k/150k/300k)
- Seed dữ liệu thật: 14 combo F&B, 6 phim, lịch chiếu 3 ngày × 3 phòng (cờ DEMO_SCHEDULE_SEEDED)
- Lần đầu commit toàn bộ tầng backend (audit log, phân quyền, ví, review, thông báo, BOM, ca trực, ticketing...)