@@ -1,34 +1,76 @@
 package com.devcine.backend.config;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
+@EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final JwtFilter jwtFilter;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable()) // Tắt bảo vệ CSRF để có thể POST/PUT/DELETE
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Bật CORS
+            .csrf(AbstractHttpConfigurer::disable)
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                .anyRequest().permitAll() // Cho phép tất cả các API đi qua mà không cần login (để test CRUD cơ bản)
-            );
+                // Public — không cần token
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/api/movies/**").permitAll()
+                .requestMatchers("/api/showtimes/**").permitAll()
+                .requestMatchers("/api/categories/**").permitAll()
+                .requestMatchers("/api/formats/**").permitAll()
+                .requestMatchers("/api/seats/**").permitAll()
+                .requestMatchers("/api/fnbs/**").permitAll()
+                .requestMatchers("/api/settings/**").permitAll()
+                // Xem đánh giá phim công khai; gửi đánh giá vẫn yêu cầu đăng nhập
+                .requestMatchers(HttpMethod.GET, "/api/reviews/**").permitAll()
+                // Danh sách hệ thống rạp — công khai cho trang Cụm rạp
+                .requestMatchers(HttpMethod.GET, "/api/v1/cinemas/**").permitAll()
+                // Danh sách khuyến mãi đang chạy — công khai cho trang Khuyến mãi
+                .requestMatchers(HttpMethod.GET, "/api/marketing/promotions/active").permitAll()
+                .requestMatchers("/api/payment/vnpay_return").permitAll()
+                .requestMatchers("/api/system/**").permitAll()
+                .requestMatchers("/api/upload/**").permitAll()
+                // Yêu cầu xác thực
+                .anyRequest().authenticated()
+            )
+            .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*")); // Cho phép Frontend truy cập
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
